--- a/ETL_create_database.ipynb.ipynb
+++ b/ETL_create_database.ipynb.ipynb
@@ -81,11 +81,11 @@
     "\n",
     "def read_movie_create_df():\n",
     "    # Read in the kaggle metadata and MovieLens ratings CSV files as Pandas DataFrames.\n",
-    "    kaggle_metadata = pd.read_csv(f'{file_dir}/movies_metadata.csv', low_memory=False)\n",
-    "    ratings = pd.read_csv(f'{file_dir}/ratings.csv')\n",
+    "    kaggle_metadata = pd.read_csv(kaggle_file, low_memory=False)\n",
+    "    ratings = pd.read_csv(ratings_file)\n",
     "\n",
     "    # Open and read the Wikipedia data JSON file.\n",
-    "    with open(f'{file_dir}/wikipedia-movies.json', mode='r') as file:\n",
+    "    with open(wiki_file, mode='r') as file:\n",
     "        wiki_movies_raw = json.load(file)\n",
     "    \n",
     "    # Write a list comprehension to filter out TV shows.\n",
@@ -289,14 +289,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jackp\\AppData\\Local\\Temp/ipykernel_9896/3996517429.py:93: SettingWithCopyWarning: \n",
+      "C:\\Users\\jackp\\AppData\\Local\\Temp/ipykernel_6696/3294874689.py:93: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -307,19 +307,19 @@
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  return super().drop(\n",
-      "C:\\Users\\jackp\\AppData\\Local\\Temp/ipykernel_9896/3996517429.py:100: SettingWithCopyWarning: \n",
+      "C:\\Users\\jackp\\AppData\\Local\\Temp/ipykernel_6696/3294874689.py:100: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  wiki_movies_df['budget'] = budget.str.extract(f'({form_one}|{form_two})', flags=re.IGNORECASE)[0].apply(parse_dollars)\n",
-      "C:\\Users\\jackp\\AppData\\Local\\Temp/ipykernel_9896/3996517429.py:108: SettingWithCopyWarning: \n",
+      "C:\\Users\\jackp\\AppData\\Local\\Temp/ipykernel_6696/3294874689.py:108: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  wiki_movies_df['release_date'] = pd.to_datetime(release_date.str.extract(f'({date_form_one}|{date_form_two}|{date_form_three}|{date_form_four})')[0], infer_datetime_format=True)\n",
-      "C:\\Users\\jackp\\AppData\\Local\\Temp/ipykernel_9896/3996517429.py:114: SettingWithCopyWarning: \n",
+      "C:\\Users\\jackp\\AppData\\Local\\Temp/ipykernel_6696/3294874689.py:114: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -331,33 +331,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "importing rows 0 to 1000000...Done. 22.773576259613037 total seconds elapsed\n",
-      "importing rows 1000000 to 2000000...Done. 45.452797651290894 total seconds elapsed\n",
-      "importing rows 2000000 to 3000000...Done. 68.16461110115051 total seconds elapsed\n",
-      "importing rows 3000000 to 4000000...Done. 90.21985363960266 total seconds elapsed\n",
-      "importing rows 4000000 to 5000000...Done. 112.20520043373108 total seconds elapsed\n",
-      "importing rows 5000000 to 6000000...Done. 134.25916981697083 total seconds elapsed\n",
-      "importing rows 6000000 to 7000000...Done. 156.25769424438477 total seconds elapsed\n",
-      "importing rows 7000000 to 8000000...Done. 178.00273084640503 total seconds elapsed\n",
-      "importing rows 8000000 to 9000000...Done. 199.92195558547974 total seconds elapsed\n",
-      "importing rows 9000000 to 10000000...Done. 222.0169858932495 total seconds elapsed\n",
-      "importing rows 10000000 to 11000000...Done. 244.00623106956482 total seconds elapsed\n",
-      "importing rows 11000000 to 12000000...Done. 265.8595645427704 total seconds elapsed\n",
-      "importing rows 12000000 to 13000000...Done. 287.5761659145355 total seconds elapsed\n",
-      "importing rows 13000000 to 14000000...Done. 309.8115017414093 total seconds elapsed\n",
-      "importing rows 14000000 to 15000000...Done. 332.2031898498535 total seconds elapsed\n",
-      "importing rows 15000000 to 16000000...Done. 354.1796054840088 total seconds elapsed\n",
-      "importing rows 16000000 to 17000000...Done. 376.71724247932434 total seconds elapsed\n",
-      "importing rows 17000000 to 18000000...Done. 399.3412618637085 total seconds elapsed\n",
-      "importing rows 18000000 to 19000000...Done. 421.16629433631897 total seconds elapsed\n",
-      "importing rows 19000000 to 20000000...Done. 443.32786989212036 total seconds elapsed\n",
-      "importing rows 20000000 to 21000000...Done. 465.38710474967957 total seconds elapsed\n",
-      "importing rows 21000000 to 22000000...Done. 487.4461624622345 total seconds elapsed\n",
-      "importing rows 22000000 to 23000000...Done. 509.228520154953 total seconds elapsed\n",
-      "importing rows 23000000 to 24000000...Done. 531.30322098732 total seconds elapsed\n",
-      "importing rows 24000000 to 25000000...Done. 553.1771147251129 total seconds elapsed\n",
-      "importing rows 25000000 to 26000000...Done. 575.159021615982 total seconds elapsed\n",
-      "importing rows 26000000 to 26024289...Done. 575.6656491756439 total seconds elapsed\n"
+      "importing rows 0 to 1000000...Done. 22.762529134750366 total seconds elapsed\n",
+      "importing rows 1000000 to 2000000...Done. 44.98441195487976 total seconds elapsed\n",
+      "importing rows 2000000 to 3000000...Done. 67.18201398849487 total seconds elapsed\n",
+      "importing rows 3000000 to 4000000...Done. 89.21039867401123 total seconds elapsed\n",
+      "importing rows 4000000 to 5000000...Done. 111.0358636379242 total seconds elapsed\n",
+      "importing rows 5000000 to 6000000...Done. 134.2120122909546 total seconds elapsed\n",
+      "importing rows 6000000 to 7000000...Done. 156.90492510795593 total seconds elapsed\n",
+      "importing rows 7000000 to 8000000...Done. 178.74461007118225 total seconds elapsed\n",
+      "importing rows 8000000 to 9000000...Done. 201.00891542434692 total seconds elapsed\n",
+      "importing rows 9000000 to 10000000...Done. 223.0583598613739 total seconds elapsed\n",
+      "importing rows 10000000 to 11000000...Done. 245.2281699180603 total seconds elapsed\n",
+      "importing rows 11000000 to 12000000...Done. 267.21556425094604 total seconds elapsed\n",
+      "importing rows 12000000 to 13000000...Done. 289.24478220939636 total seconds elapsed\n",
+      "importing rows 13000000 to 14000000...Done. 311.37114238739014 total seconds elapsed\n",
+      "importing rows 14000000 to 15000000...Done. 333.5595495700836 total seconds elapsed\n",
+      "importing rows 15000000 to 16000000...Done. 355.7520475387573 total seconds elapsed\n",
+      "importing rows 16000000 to 17000000...Done. 377.81684851646423 total seconds elapsed\n",
+      "importing rows 17000000 to 18000000...Done. 400.00835037231445 total seconds elapsed\n",
+      "importing rows 18000000 to 19000000...Done. 423.3565900325775 total seconds elapsed\n",
+      "importing rows 19000000 to 20000000...Done. 446.2628915309906 total seconds elapsed\n",
+      "importing rows 20000000 to 21000000...Done. 469.16063165664673 total seconds elapsed\n",
+      "importing rows 21000000 to 22000000...Done. 491.48492884635925 total seconds elapsed\n",
+      "importing rows 22000000 to 23000000...Done. 513.4530401229858 total seconds elapsed\n",
+      "importing rows 23000000 to 24000000...Done. 535.7205355167389 total seconds elapsed\n",
+      "importing rows 24000000 to 25000000...Done. 558.5020842552185 total seconds elapsed\n",
+      "importing rows 25000000 to 26000000...Done. 581.1351056098938 total seconds elapsed\n",
+      "importing rows 26000000 to 26024289...Done. 581.6357645988464 total seconds elapsed\n"
      ]
     },
     {
@@ -367,7 +367,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_9896/3887000010.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# 11. Set the three variables equal to the function created in D1.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mwiki_file\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkaggle_file\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mratings_file\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mread_movie_create_df\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_6696/3887000010.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# 11. Set the three variables equal to the function created in D1.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mwiki_file\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkaggle_file\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mratings_file\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mread_movie_create_df\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m: cannot unpack non-iterable NoneType object"
      ]
     }
